--- a/src/blocks/auth/__button/auth__button.css
+++ b/src/blocks/auth/__button/auth__button.css
@@ -1,11 +1,11 @@
-.popup__container-button{
-    margin-top: 18px;
+.auth__button{
+    margin-top: 100px;
     background-color: #000;
     font-family: 'Inter', 'Arial', sans-serif;
     font-weight: normal;
     font-size: 18px;
-    color: #fff;
-    background-color: #000;
+    background-color: #fff;
+    color: #000;
     text-align: center;
     height: 50px;
     outline: none;
@@ -15,15 +15,15 @@
 
 
 @media screen and (max-width: 920px){
-    .popup__container-button{
-        margin-top: 15px;
+    .auth__button{
+        margin-top: 143px;
         height: 46px;
         font-size: 14px;
     }    
 }
 
 
-.popup__container-button:hover{
+.auth__button:hover{
     opacity: 0.8;
     transition: opacity 0.3s;
 }
