--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,11 +1,12 @@
 .profile__avatar{
     width: 120px;
     height: 120px;
+    position: inherit;
     background-position: center;
     background-repeat: no-repeat;
     border-radius: 50%;
     margin-right: 30px;
-    z-index: 1;
+    z-index: 2;
 }
 
 
